public/css/style.css
:root {
    --primary-color-light: hsl(220, 43%, 40%);
    --primary-color: hsl(220, 43%, 30%);
    --primary-color-dark: hsl(220, 43%, 20%);
    --secondary-color-light: hsl(24, 87%, 67%);
    --secondary-color: hsl(24, 87%, 57%);
    --secondary-color-dark: hsl(24, 87%, 47%);
    --text-color: #555;
    --background-color: #fff;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'poppins', sans-serif;
}
.off-screen-menu {
    background-color: var(--primary-color-dark);
    height: 100vh;
    width: 100%;
    max-width: 40%;
    position: fixed;
    top: 0;
    right: -40%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    text-align: center;
    font-size: 2rem;
    transition: 0.3s ease;
    opacity: 80%;
    z-index: 5;
}
.off-screen-menu.active {
    right: 0;
}
.ham-menu {
    height: 50px;
    width: 50px;
    margin-left: auto;
    margin-right: 2rem;
    position: relative;
    top: 5px;
}
.ham-menu span {
    height: 3px;
    width: 80%;
    background-color: var(--primary-color-light);
    border-radius: 25px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: 0.3s ease;
    z-index: 5;
}
.ham-menu span:nth-child(1) {
    top: 25%;
}
.ham-menu span:nth-child(3) {
    top: 75%;
}
.ham-menu.active span:nth-child(1) {
    top: 50%;
    transform: translate(-50%, -50%) rotate(45deg);
}
.ham-menu.active span:nth-child(2) {
    opacity: 0;
}
.ham-menu.active span:nth-child(3) {
    top: 50%;
    transform: translate(-50%, -50%) rotate(-45deg);
}
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--primary-color);
    color: white;
}
ul {
    list-style-type: none;
    margin-top: 100px;
}
.nav-item {
    font-size: 1.5rem;
    padding: 6px;
    cursor: pointer;
}
header {
    background-color: var(--primary-color);
    height: 4rem;
    margin-top: 0;
    position: sticky; /* This makes the header stick */
    top: 0; /* It will stick to the very top of the viewport */
    width: 100%; /* Ensure it spans the full width */
    z-index: 10; /* Make sure it stays on top of other content */
}

.hoshida-logo {
    height: 40px;
    margin-left: 1rem;
    margin-top: 10px;
}
.logo-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 2%;
    /* Black with 50% transparency. Adjust the last number (0.5) to make it darker or lighter. */
    z-index: 1; /* Make sure it's on top of the image */
}
.hero-container {
    position: relative;
    height: 100px;
    color: white;
    display: flex;
    justify-content: center;
}
.hero-background-image {
    height: 200px;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    object-fit: cover;
    z-index: -999;
    opacity: 90%;
}
.hero-content {
    position: relative;
    text-align: center;
    padding: 10px;
    max-width: 800px;
    z-index: 2;
    font-size: 0.7rem;
    display: flex;
}
.cta-container {
    height: 100px;
    flex-direction: column;
    position: relative;
    display: flex;
    justify-content: center;
    text-align: center;
    font-size: 16px;
    bottom: 15px;
    color: white;
    z-index: 2;
}

.japanese {
    font-family: 'Noto Sans JP', sans-serif;
    font-weight: 400;
    font-optical-sizing: auto;
    font-style: normal;
}
.english {
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-style: normal;
}
.cta-button {
    height: 35px;
    border-radius: 10px;
    position: relative;
    margin-top: 5px;
    padding: 0 10px 0 10px;
    text-align: center;
    background-color: var(--secondary-color-dark);
    color: white;
    margin-top: 15px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    border: none;
    font-size: 1rem;
}

.cta-button:hover {
    background-color: var(--secondary-color-light);
}
.hero-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 200%;
    /* Black with 50% transparency. Adjust the last number (0.5) to make it darker or lighter. */
    background-color: rgba(0, 0, 0, 0.3);
    z-index: 1; /* Make sure it's on top of the image */
}
.cta-modal {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    height: 100%;
    z-index: 9;
    display: flex;
    justify-content: center;
}
.modal-content {
    padding: 1rem;
    border-radius: 8px;
    position: relative;
}
.cta-modal.hidden {
    display: none;
}
.close-modal-btn {
    background-color: transparent;
    justify-self: flex-end;
    border: none;
    font-size: 2rem;
    cursor: pointer;
    margin-left: 10px;
}
.introduction-container {
    text-align: center;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 800px;
    margin: 0 auto;
    padding: 2rem;
}
.introduction-header {
    color: var(--primary-color);
    margin: 10px;
}
.introduction-content {
    font-size: 14px;
    padding: 0 20px;
    color: var(--text-color);
}
.slide-show-container {
    /* height: 300px; */
    width: 100%;
    background-color: var(--primary-color);
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 4rem 0;
}
.swiper {
    width: 90%;
    max-width: 1000px;
    height: fit-content;
    border-radius: 15px;
    --swiper-navigation-color: white;
    --swiper-navigation-size: 30px;
    --swiper-pagination-color: white;
    overflow: hidden;
}
.swiper-slide {
    aspect-ratio: 4/3;
}

.swiper-slide img {
    width: 100%;
    height: 100%;
    display: block;
    object-fit: contain;
}

.swiper-button-prev {
    color: white;
    z-index: 100;
}
.swiper-button-next {
    color: white;
    z-index: 100;
}

.testimonial-container {
    height: auto;
    width: 100%;

    align-items: center;
    text-align: center;
    justify-content: center;

    color: var(--text-color);
}
.testimonial-content {
    display: flex;
    flex-direction: column; /* Default to a single column for mobile */
    align-items: center; /* Center items vertically in the column */
    gap: 2rem; /* Add space between the items */
    padding: 1rem; /* Add some space around the content */
}
.testimonial-header {
    color: var(--primary-color);
    margin: 10px;
}
.testimonial-img {
    height: 150px;
}
.testimonial-text {
    font-size: 12px;
    text-align: center;
    padding: 20px;
    max-width: 700px;
}
.staff-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: auto;
    gap: 20px;
    height: auto;
    justify-items: center;
    align-items: start;
    margin-top: 20px;
    padding: 20px; /* Add some padding around the container */
    color: var(--text-color);
}
.staff-header {
    color: var(--primary-color);
    grid-column: 1/-1;
    padding: 10px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
.staff-img {
    height: 160px;
}
.staff-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 10px;
}
.staff-card-title {
    font-size: 14px;
}
.staff-card-name {
    font-size: 14px;
}
.staff-card-description {
    font-size: 12px;
    max-width: 500px;
}
.pricing-container {
    height: 250px;
    width: 100%;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    background-color: var(--primary-color);
}
.pricing-header {
    color: white;
    margin: 10px;
    text-decoration: underline;
}
.pricing-content {
    color: white;
    padding: 20px;
}
.cta-2-container {
    width: 100%;
    display: flex;
    justify-content: center;
    height: 200px;
    position: relative;
    top: 10px;
}
.cta-2-header {
    color: var(--primary-color);
}
.cta-phone-number {
    color: var(--primary-color);
    margin: 20px;
    text-decoration: none;
}
.cta-phone-number a {
    text-decoration: none;
    color: var(--primary-color);
}
.cta-one {
    color: white;
}
.cta-one a {
    color: white;
}
.footer-container {
    height: 100px;
    background-color: var(--primary-color);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.footer-text {
    font-size: 10px;
    color: white;
    padding: 10px;
}

/* --- MEDIA QUERY FOR DESKTOP --- */
@media (min-width: 768px) {
    .swiper-slide {
        /* On wider screens, use a more panoramic aspect ratio */
        aspect-ratio: 16 / 9;
    }
}
/* --- MEDIA QUERY FOR DESKTOP --- */
@media (min-width: 1024px) {
    /* This targets screens 1024px and wider */
    .testimonial-content {
        /* Change the direction from column to row */
        flex-direction: row;

        /* Add a gap for spacing between the cards */
        gap: 5rem;
        align-items: flex-start; /* Align items to the top in a row */
        justify-content: center;
    }

    .testimonial {
        /* It's good practice to set a base width for the items */
        flex-basis: 300px;
    }
    .hero-content {
        font-size: 1.9rem;
    }
    .introduction-content {
        font-size: 1.3rem;
        max-width: 1000px;
    }
    .cta-container {
        font-size: 1.3rem;
        padding: 0;
        margin-bottom: 0;
    }
    .hero-background-image {
        height: 235px;
    }
    .hero-overlay {
        height: 235px;
    }
    .cta-button {
        height: 4rem;
        width: 18rem;
        margin-bottom: 0;
        padding-bottom: 0;
        font-size: 1.2rem;
    }
    .testimonial-title {
        font-size: 1.4rem;
    }
    .testimonial-text {
        font-size: 1.2rem;
    }
    .testimonial-img {
        height: 350px;
    }
    .header {
        font-size: 3rem;
    }
    .staff-card p {
        font-size: 1.2rem;
    }
    .staff-card .staff-card-name {
        font-size: 1.2rem;
    }
    .staff-card .staff-card-title {
        font-size: 1.2rem;
    }
    .pricing-container {
        height: 400px;
        padding: 30px;
        margin: 50px 0 30px 0;
    }
    .cta-2-container {
        margin: 90px 0 30px 0;
        font-size: 1.4rem;
    }
    .footer-container {
        flex-direction: column;
        justify-content: center;
        margin: 0;
        align-items: center;
        padding: 0;
    }
}

